--- a/.github/workflows/test-platforms-weekly.yml
+++ b/.github/workflows/test-platforms-weekly.yml
@@ -1,7 +1,7 @@
 name: Weekly Platform Tests
 on:
-  schedule:
-    - cron: "0 6 * * 0"
+  #schedule:
+  #  - cron: "0 6 * * 0"
   workflow_dispatch:
     inputs:
       platform_scope:
