--- a/.github/workflows/cross-platform-build.yml
+++ b/.github/workflows/cross-platform-build.yml
@@ -27,13 +27,13 @@ jobs:
       - name: Build binary (native) - Unix
         if: ${{ matrix.buildx != true && matrix.goos != 'windows' }}
         id: native_unix
-        run: ./.github/scripts/cross-compile-binary.sh
+        run: ./.github/scripts/build-binary.sh
         shell: bash
 
       - name: Build binary (native) - Windows
         if: ${{ matrix.buildx != true && matrix.goos == 'windows' }}
         id: native_windows
-        run: ./.github/scripts/cross-compile-binary.ps1
+        run: ./.github/scripts/build-binary.ps1
         shell: pwsh
 
       - name: Upload artifact (native)
@@ -51,6 +51,10 @@ jobs:
         if: ${{ matrix.buildx == true }}
         uses: docker/setup-buildx-action@v3
 
+      - name: Get Go version
+        id: go-version
+        run: echo "v=$(cat .go-version | cut -d' ' -f3)" >> $GITHUB_OUTPUT
+
       - name: Build binary (buildx)
         if: ${{ matrix.buildx == true }}
         id: buildx
@@ -60,6 +64,7 @@ jobs:
             --file .github/docker/Dockerfile.cross \
             --build-arg GOOS=${{ matrix.goos }} \
             --build-arg GOARCH=${{ matrix.goarch }} \
+            --build-arg VERSION=${{ steps.go-version.outputs.v }}} \
             --output=type=local,dest=out \
             --progress=plain \
             .
@@ -70,3 +75,13 @@ jobs:
         with:
           name: bao-${{ matrix.goos }}-${{ matrix.goarch }}
           path: out/bao
+
+      - name: Compile test binary
+        if: always()
+        env:
+          GOOS: ${{ matrix.goos }}
+          GOARCH: ${{ matrix.goarch }}
+          CGO_ENABLED: 0
+        run: |
+          echo "Compile tests for ${{ matrix.goos }}/${{ matrix.goarch }}"
+          make testcompile
