fix(ci): Run full test suite only on linux
Signed-off-by: Roel de Cort <roel.decort@secretz.io>

--- a/.github/workflows/test-platforms-weekly.yml
+++ b/.github/workflows/test-platforms-weekly.yml
@@ -36,6 +36,7 @@ jobs:
 
   tests:
     needs: gen-matrix
+    if: ${{ matrix.goos == 'linux' }}
     strategy:
       fail-fast: false
       matrix:
