ci: Do not use include in strategy matrix
Signed-off-by: Roel de Cort <roel.decort@secretz.io>

--- a/.github/workflows/cross-platform-build.yml
+++ b/.github/workflows/cross-platform-build.yml
@@ -11,8 +11,7 @@ jobs:
   build:
     strategy:
       fail-fast: false
-      matrix:
-        include: ${{ fromJSON(inputs.matrix) }}
+      matrix: ${{ fromJSON(inputs.matrix) }}
     runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332 # v4.1.7
