ci: Add yq needed to correctly parse .goreleaser
Signed-off-by: Roel de Cort <roel.decort@secretz.io>

--- a/.github/workflows/test-platforms-weekly.yml
+++ b/.github/workflows/test-platforms-weekly.yml
@@ -19,6 +19,10 @@ jobs:
       test-matrix: ${{ steps.mk.outputs.test-matrix }}
     steps:
       - uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332 # v4.1.7
+      - name: Install yq
+        run: |
+          sudo wget -qO /usr/local/bin/yq https://github.com/mikefarah/yq/releases/latest/download/yq_linux_amd64
+          sudo chmod +x /usr/local/bin/yq
       - name: Generate platform matrix
         id: mk
         run: |
