ci: Debug matrix script
Signed-off-by: Roel de Cort <roel.decort@secretz.io>

--- a/.github/workflows/test-platforms-weekly.yml
+++ b/.github/workflows/test-platforms-weekly.yml
@@ -19,10 +19,6 @@ jobs:
       test-matrix: ${{ steps.mk.outputs.test-matrix }}
     steps:
       - uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332 # v4.1.7
-      - name: Install yq
-        run: |
-          sudo wget -qO /usr/local/bin/yq https://github.com/mikefarah/yq/releases/latest/download/yq_linux_amd64
-          sudo chmod +x /usr/local/bin/yq
       - name: Generate platform matrix
         id: mk
         run: |
@@ -32,10 +28,12 @@ jobs:
           fi
           echo "Generating matrix for scope: $SCOPE"
           FULL_MATRIX=$(./.github/scripts/generate-platform-matrix.sh $SCOPE | jq -c .)
+          echo "FULL_MATRIX=$FULL_MATRIX"
           echo "matrix=$FULL_MATRIX" >> "$GITHUB_OUTPUT"
 
           # Generate test matrix - only linux/amd64 
           TEST_MATRIX=$(echo "$FULL_MATRIX" | jq -c 'map(select(.goos == "linux" and .goarch == "amd64"))')
+          echo "TEST_MATRIX=$TEST_MATRIX"
           echo "test-matrix=$TEST_MATRIX" >> "$GITHUB_OUTPUT"
 
   build:
@@ -54,7 +52,6 @@ jobs:
     with:
       runs-on: ${{ matrix.os }}
       go-arch: ${{ matrix.goarch }}
-      # Full test suite on linux/amd64 only
       total-runners: 16
       binary-tests: true
       name: weekly-${{ matrix.goos }}-${{ matrix.goarch }}
