--- a/.github/workflows/cross-platform-build.yml
+++ b/.github/workflows/cross-platform-build.yml
@@ -64,7 +64,7 @@ jobs:
             --file .github/docker/Dockerfile.cross \
             --build-arg GOOS=${{ matrix.goos }} \
             --build-arg GOARCH=${{ matrix.goarch }} \
-            --build-arg VERSION=${{ steps.go-version.outputs.v }}} \
+            --build-arg VERSION=${{ steps.go-version.outputs.v }} \
             --output=type=local,dest=out \
             --progress=plain \
             .
